# imperal-video-creator

./: .gitignore  ARCHITECTURE.md  README.md  agent.py  context-sync.md  extension.py  heygen_mcp.py  imperal.json  main.py  manifest.json  pyproject.toml  taskqueue.py  web.py
api/: __init__.py  assets.py  figma.py  generate.py  heygen.py  queue_api.py  videos.py
config/: defaults.py
knowledge/: ai_copywriting.json  caption_templates.json  community_tracking.json  content_checklist.json  content_iteration.json  cta_templates.json  email_sequences.json  funnels.json  hook_templates.json  ideation_methods.json  market_research.json  offer_creation.json  packaging_rules.json  pcm_types.json  sales_psychology.json  sales_system.json  script_structures.json  traffic_conversion.json  trajectory_pathways.json  video_formats.json  vsl_templates.json
modules/: __init__.py  base.py  captions.py  cta.py  email_sequences.py  framing.py  funnel_copy.py  hooks.py  ideation.py  iteration.py  launch.py  market_research.py  packaging.py  pcm.py  publishing.py  sales.py  scripting.py  video_production.py
pipelines/: __init__.py  base.py  batch_content.py  full_video.py  quick_script.py
templates/: index.html
tests/: conftest.py  test_captions.py  test_cta.py  test_hooks.py  test_ideation.py  test_modules_base.py  test_pcm.py  test_pipelines.py  test_scripting.py  test_sdk_compat.py
ui/: __init__.py  calendar.py  dashboard.py  settings.py  sidebar.py
